adjust map/sidebar size on mobile + fix sticky header

--- a/react/src/components/map/map.css
+++ b/react/src/components/map/map.css
@@ -131,7 +131,7 @@
 @media all and (max-width: 800px) {
     #crashMap {
         width: 100%;
-        height: 60%;
+        height: 55%;
         font-size: 10px;
     }
     #legend{
