--- a/react/src/components/sidebar/sidebar.css
+++ b/react/src/components/sidebar/sidebar.css
@@ -107,12 +107,13 @@
 @media all and (max-width: 800px) {
     #sidebar{
         width: calc(100% - 20px);
-        height: 40%;
-        padding: 15px 10px;
+        height: 45%;
+        padding: 0 10px;
     }
     #crash-map-sidebar-header {
         font-size: 1.2rem;
         margin-top: -15px;
+        margin-bottom: 15px;
     }
     .crash-map-sidebar-subheader{
         font-size: 1rem;
